--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 </head>
 
 <body>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="">Heading</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12"><i class="d-block mx-auto fa fa-5x fa-font-awesome"></i></div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="http://localhost:5000/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
