--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"><i class="d-block mx-auto fa fa-font-awesome fa-2x"></i></div>
+        <div class="col-md-12"><i class="d-block mx-auto fa fa-cog fa-3x"></i></div>
       </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="http://localhost:5000/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+
+
+
+
 
 
 
