Commit from Pingendo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
+        <div class="col-md-12"><a href="#" class="btn btn-outline-primary">Button</a></div>
+      </div>
+      <div class="row">
         <div class="col-md-12"><i class="d-block mx-auto fa fa-cog fa-3x"></i></div>
       </div>
     </div>
@@ -27,6 +30,8 @@
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="http://localhost:5000/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+
+
 
 
 
