--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="http://localhost:5000/assets/bootstrap/bootstrap-4.0.0-alpha.6.css" type="text/css">
-</head>
+  <link rel="stylesheet" href="http://localhost:5000/assets/bootstrap/bootstrap-4.0.0-alpha.6.css" type="text/css"> </head>
 
 <body>
   <div class="py-5">
@@ -20,7 +19,13 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"><a href="#" class="btn btn-outline-primary">Button</a></div>
+        <div class="col-md-6"><a href="#" class="btn btn-outline-primary">Button</a></div>
+        <div class="col-md-6">
+          <div class="btn-group"> <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> Dropdown </button>
+            <div class="dropdown-menu"> <a class="dropdown-item" href="#">Action</a>
+              <div class="dropdown-divider"></div> <a class="dropdown-item" href="#">Separated link</a> </div>
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-12"><i class="d-block mx-auto fa fa-cog fa-3x"></i></div>
@@ -30,26 +35,6 @@
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
   <script src="http://localhost:5000/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
