--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"><i class="d-block mx-auto fa fa-cog fa-3x"></i></div>
+        <div class="col-md-12"><i class="d-block mx-auto fa fa-cog fa-3x"></i>
+          <div class="btn-group"> <button class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown"> Dropdown </button>
+            <div class="dropdown-menu"> <a class="dropdown-item" href="#">Action</a>
+              <div class="dropdown-divider"></div> <a class="dropdown-item" href="#">Separated link</a> </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
