--- a/dwd-&-dfdf.html
+++ b/dwd-&-dfdf.html
@@ -14,6 +14,9 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav ">
           <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
+          <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
+          <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
+          <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
           <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
         </ul>
