--- a/dwd-%26-dfdf.html
+++ b/dwd-%26-dfdf.html
@@ -26,10 +26,7 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"><img class="center-block img-fluid d-block" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg"><img class="center-block img-fluid d-block" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg"><img class="center-block img-fluid d-block"
-            src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg"><img class="center-block img-fluid d-block" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg">
-          <p>decodeURIComponent</p>
-        </div>
+        <div class="col-md-12"><img class="center-block img-fluid d-block" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg"></div>
       </div>
     </div>
   </div>
