--- a/prova/p%q.html
+++ b/prova/p%q.html
@@ -6,7 +6,7 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"><img class="center-block img-fluid d-block" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg"></div>
+        <div class="col-md-12"></div>
       </div>
     </div>
   </div>
