--- a/prov%2.html
+++ b/prov%2.html
@@ -10,6 +10,15 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
+        <div class="col-md-12">
+          <h1 class="display-1">Title</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
         <div class="col-md-12"><img class="center-block img-fluid d-block" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg"></div>
       </div>
     </div>
