Commit from Pingendo

--- a/prov%2.html
+++ b/prov%2.html
@@ -13,8 +13,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="display-1">Title</h1>
-        </div>
+          <h1 class="display-1">Title</h1><a href="#" class="btn btn-outline-primary">Button</a> </div>
       </div>
     </div>
   </div>
